--- a/packaging/arch/PKGBUILD
+++ b/packaging/arch/PKGBUILD
@@ -17,8 +17,9 @@ package() {
   mkdir -p "$pkgdir/usr/share/metainfo"
   mkdir -p "$pkgdir/usr/share/icons/hicolor/scalable/apps"
 
-  cp "$srcdir/main.py" "$pkgdir/usr/bin/kernel-installer-gui"
-  cp -r "$srcdir/kernel_installer_gui/"* "$pkgdir/usr/share/kernel-installer/"
+  cp "$srcdir/bin/kernel-installer" "$pkgdir/usr/bin/kernel-installer"
+  chmod +x "$pkgdir/usr/bin/kernel-installer"
+  cp -r "$srcdir/kernel_installer_gui" "$pkgdir/usr/share/kernel-installer/"
   cp "$srcdir/kernel_installer_gui/data/kernel-installer.desktop" "$pkgdir/usr/share/applications/"
   cp "$srcdir/kernel_installer_gui/data/io.github.alexiarstein.kernelinstall.metainfo.xml" "$pkgdir/usr/share/metainfo/"
   cp "$srcdir/kernel_installer_gui/assets/icons/kernel-installer.png" "$pkgdir/usr/share/icons/hicolor/scalable/apps/"
