fix: corregir línea Exec en archivo .desktop para apuntar al comando global

--- a/kernel_installer_gui/data/kernel-installer.desktop
+++ b/kernel_installer_gui/data/kernel-installer.desktop
@@ -23,7 +23,7 @@ Comment[de]=Kernels mit optimierten Profilen herunterladen, kompilieren und inst
 Comment[it]=Scarica, compila e installa il kernel Linux con profili ottimizzati
 Comment[ro]=Descărcați, compilați și instalați nucleul Linux cu profiluri optimizate
 Comment[ru]=Скачивайте, компилируйте и устанавливайте ядро Linux с оптимизированными профилями
-Exec=main.py
+Exec=kernel-installer
 Icon=kernel-installer
 Terminal=false
 Type=Application
