--- a/packaging/arch/PKGBUILD
+++ b/packaging/arch/PKGBUILD
@@ -15,12 +15,16 @@ package() {
   mkdir -p "$pkgdir/usr/share/kernel-installer"
   mkdir -p "$pkgdir/usr/share/applications"
   mkdir -p "$pkgdir/usr/share/metainfo"
-  mkdir -p "$pkgdir/usr/share/icons/hicolor/scalable/apps"
+  mkdir -p "$pkgdir/usr/share/icons/hicolor/48x48/apps"
+  mkdir -p "$pkgdir/usr/share/icons/hicolor/128x128/apps"
+  mkdir -p "$pkgdir/usr/share/icons/hicolor/256x256/apps"
 
   cp "$srcdir/bin/kernel-installer" "$pkgdir/usr/bin/kernel-installer"
   chmod +x "$pkgdir/usr/bin/kernel-installer"
   cp -r "$srcdir/kernel_installer_gui" "$pkgdir/usr/share/kernel-installer/"
   cp "$srcdir/kernel_installer_gui/data/kernel-installer.desktop" "$pkgdir/usr/share/applications/"
   cp "$srcdir/kernel_installer_gui/data/io.github.alexiarstein.kernelinstall.metainfo.xml" "$pkgdir/usr/share/metainfo/"
-  cp "$srcdir/kernel_installer_gui/assets/icons/kernel-installer.png" "$pkgdir/usr/share/icons/hicolor/scalable/apps/"
+  cp "$srcdir/kernel_installer_gui/assets/icons/kernel-installer-48.png" "$pkgdir/usr/share/icons/hicolor/48x48/apps/kernel-installer.png"
+  cp "$srcdir/kernel_installer_gui/assets/icons/kernel-installer-128.png" "$pkgdir/usr/share/icons/hicolor/128x128/apps/kernel-installer.png"
+  cp "$srcdir/kernel_installer_gui/assets/icons/kernel-installer-256.png" "$pkgdir/usr/share/icons/hicolor/256x256/apps/kernel-installer.png"
 }
