--- a/packaging/arch/PKGBUILD
+++ b/packaging/arch/PKGBUILD
@@ -6,7 +6,7 @@ pkgdesc="Graphical interface for downloading, compiling and installing Linux ker
 arch=('any')
 url="https://github.com/SoplosLinux/kernell-installer"
 license=('GPL3')
-depends=('python-gobject' 'gtk3' 'wget' 'binutils' 'flex' 'bison' 'make' 'gcc' 'bc' 'rsync' 'kmod' 'dwarves' 'cpio' 'linux-api-headers' 'pkgconf' 'ncurses' 'gettext' 'fakeroot')
+depends=('python-gobject' 'gtk3' 'wget' 'binutils' 'flex' 'bison' 'make' 'gcc' 'bc' 'rsync' 'kmod' 'dwarves' 'cpio' 'linux-api-headers' 'pkgconf' 'ncurses' 'gettext' 'fakeroot' 'pahole' 'libelf' 'openssl' 'git' 'tar' 'xz' 'curl' 'coreutils')
 source=("$pkgname-$pkgver.tar.gz::https://github.com/SoplosLinux/kernell-installer/archive/refs/tags/v$pkgver.tar.gz")
 sha256sums=('SKIP')
 
