chore: professional release v1.0.0 consolidation
- Full i18n support (8 languages: EN, ES, FR, PT, DE, IT, RO, RU)
- Professional packaging (.deb, .rpm, Arch) with complete system structure
- Transient notifications via libnotify (auto-hide fix)
- Improved icon association using Gdk/GLib standard prgname/class
- Automated system dependency verification and installation logic
- Exhaustive multilingual documentation (README, CHANGELOG, AppStream)

--- a/kernel_installer_gui/data/kernel-installer.desktop
+++ b/kernel_installer_gui/data/kernel-installer.desktop
@@ -30,3 +30,4 @@ Type=Application
 Categories=System;Settings;
 Keywords=kernel;linux;compile;install;update;
 StartupNotify=true
+StartupWMClass=kernel-installer
