Unificación total de ID a org.soplos.kernel-installer, soporte de eliminación de kernels, localización completa a 8 idiomas y corrección de autoría (Sergi Perich)

--- a/kernel_installer_gui/data/org.soplos.kernel-installer.desktop
+++ b/kernel_installer_gui/data/org.soplos.kernel-installer.desktop
@@ -24,10 +24,10 @@ Comment[it]=Scarica, compila e installa il kernel Linux con profili ottimizzati
 Comment[ro]=Descărcați, compilați și instalați nucleul Linux cu profiluri optimizate
 Comment[ru]=Скачивайте, компилируйте и устанавливайте ядро Linux с оптимизированными профилями
 Exec=kernel-installer
-Icon=kernel-installer
+Icon=org.soplos.kernel-installer
 Terminal=false
 Type=Application
 Categories=System;Settings;
 Keywords=kernel;linux;compile;install;update;
 StartupNotify=true
-StartupWMClass=kernel-installer
+StartupWMClass=org.soplos.kernel-installer
