--- a/packaging/arch/PKGBUILD
+++ b/packaging/arch/PKGBUILD
@@ -1,12 +1,12 @@
 # Maintainer: Sergi Perich <info@soploslinux.com>
 pkgname=kernel-installer
-pkgver=1.0.2
+pkgver=1.0.3
 pkgrel=1
 pkgdesc="Graphical interface for downloading, compiling and installing Linux kernels"
 arch=('any')
 url="https://github.com/SoplosLinux/kernel-installer"
 license=('GPL3')
-depends=('python-gobject' 'gtk3' 'wget' 'binutils' 'flex' 'bison' 'make' 'gcc' 'bc' 'rsync' 'kmod' 'dwarves' 'cpio' 'linux-api-headers' 'pkgconf' 'ncurses' 'gettext' 'fakeroot' 'pahole' 'libelf' 'openssl' 'git' 'tar' 'xz' 'curl' 'coreutils')
+depends=('python-gobject' 'gtk3' 'libnotify' 'wget' 'binutils' 'flex' 'bison' 'make' 'gcc' 'bc' 'rsync' 'kmod' 'dwarves' 'cpio' 'linux-api-headers' 'pkgconf' 'ncurses' 'gettext' 'fakeroot' 'pahole' 'libelf' 'openssl' 'git' 'tar' 'xz' 'curl' 'coreutils')
 source=("$pkgname-$pkgver.tar.gz::https://github.com/SoplosLinux/kernel-installer/archive/refs/tags/v$pkgver.tar.gz")
 sha256sums=('SKIP')
 
@@ -21,6 +21,7 @@ package() {
 
   cp "$srcdir/bin/kernel-installer" "$pkgdir/usr/bin/kernel-installer"
   chmod +x "$pkgdir/usr/bin/kernel-installer"
+  cp "$srcdir/main.py" "$srcdir/README.md" "$srcdir/LICENSE" "$srcdir/CHANGELOG.md" "$srcdir/setup.py" "$pkgdir/usr/share/kernel-installer/"
   cp -r "$srcdir/kernel_installer_gui" "$pkgdir/usr/share/kernel-installer/"
   cp "$srcdir/kernel_installer_gui/data/org.soplos.kernel-installer.desktop" "$pkgdir/usr/share/applications/"
   cp "$srcdir/kernel_installer_gui/data/org.soplos.kernel-installer.metainfo.xml" "$pkgdir/usr/share/metainfo/"
